tests/baselines/reference/catchClauseWithTypeAnnotation.errors.txt
==== tests/cases/compiler/catchClauseWithTypeAnnotation.ts (1 errors) ====
    try {
    } catch (e: any) {
              ~~~~~
!!! catchClauseWithTypeAnnotation.ts(2,11): error TS1013: Catch clause parameter cannot have a type annotation.
    }